added comments to the demo notebook

--- a/demo.ipynb
+++ b/demo.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# This tutorial is based on \n",
+    "# https://mne.tools/dev/auto_tutorials/preprocessing/20_rejecting_bad_data.html\n",
+    "\n",
     "import os\n",
     "\n",
     "import numpy as np\n",
@@ -22,16 +25,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# download and load the MNE sample dataset\n",
     "\n",
     "sample_data_folder = mne.datasets.sample.data_path()\n",
     "sample_data_raw_file = os.path.join(\n",
     "    sample_data_folder, \"MEG\", \"sample\", \"sample_audvis_filt-0-40_raw.fif\"\n",
     ")\n",
-    "raw = mne.io.read_raw_fif(sample_data_raw_file, verbose=False, preload=True)\n",
-    "events_file = os.path.join(\n",
-    "    sample_data_folder, \"MEG\", \"sample\", \"sample_audvis_filt-0-40_raw-eve.fif\"\n",
-    ")\n",
-    "events = mne.read_events(events_file)\n",
+    "raw = mne.io.read_raw_fif(sample_data_raw_file, verbose=False, preload=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# apply some basic preprocessing\n",
     "\n",
     "raw.filter(l_freq=1, h_freq=None)\n",
     "_ = raw.interpolate_bads()"
@@ -43,6 +52,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# use MNE tools to detect EOG and ECG artifacts\n",
+    "\n",
     "eog_events = mne.preprocessing.find_eog_events(raw)\n",
     "ecg_events = mne.preprocessing.find_ecg_events(raw)[0]\n",
     "artifact_events = np.concatenate((eog_events, ecg_events))\n",
@@ -52,7 +63,7 @@
     "durations = [0.5] * len(artifact_events)\n",
     "descriptions = [\"blink\"] * len(eog_events) + [\"pulse\"] * len(ecg_events)\n",
     "\n",
-    "\n",
+    "# add them as annotations to the raw object\n",
     "artifact_annot = mne.Annotations(\n",
     "    onsets, durations, descriptions, orig_time=raw.info[\"meas_date\"]\n",
     ")\n",
@@ -83,6 +94,8 @@
     }
    ],
    "source": [
+    "# use joint decorrelation to identify artifact subspaces assocaited to blink artifacts\n",
+    "\n",
     "projector = EventBasedArtifactProjector(\n",
     "    'blink',\n",
     "    threshold=2.,\n",
@@ -120,6 +133,8 @@
     }
    ],
    "source": [
+    "# use joint decorrelation to identify artifact subspaces assocaited to ECG artifacts\n",
+    "\n",
     "projector = EventBasedArtifactProjector(\n",
     "    'pulse',\n",
     "    threshold=1.5,\n",
